Fix deprecated Locale construction